--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -1,2 +1,6 @@
-
-
+Window.close="Close";
+Window.minimise="Minimise";
+Window.zoom="Zoom";
+Bar.kanban="Kanban";
+Bar.todo="To-Do";
+Bar.shopping="Shopping";
