--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -4,3 +4,7 @@ Window.zoom="Zoom";
 Bar.kanban="Kanban";
 Bar.todo="To-Do";
 Bar.shopping="Shopping";
+Add.title="New Kanban";
+Add.subtitle="Start a new project in\nKanban mode";
+Add.cancel="Cancel";
+Add.confirm="New Kanban";
