Update add copy

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -4,7 +4,11 @@ Window.zoom="Zoom";
 Bar.kanban="Kanban";
 Bar.todo="To-Do";
 Bar.shopping="Shopping";
-Add.title="New Kanban";
-Add.subtitle="Start a new project in\nKanban mode";
+Add.title.1="New Kanban";
+Add.subtitle.1="Start a new Kanban Board project,";
+Add.title.2="New To-Do";
+Add.subtitle.2="Start a new To-Do List,";
+Add.title.3="New Shopping";
+Add.subtitle.3="Start a new Shopping List,";
+Add.subtitle.bottom="\nyour available space is";
 Add.cancel="Cancel";
-Add.confirm="New Kanban";
