--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -27,6 +27,9 @@ Delete.confirm="Delete";
 Delete.title.1="Delete Board";
 Delete.title.2="Delete List";
 Delete.title.3="Delete List";
+Delete.title.card.1="Delete Card";
+Delete.title.card.2="Delete Task";
+Delete.title.card.3="Delete Product";
 Delete.deleted.1="Deleted Board";
 Delete.deleted.2="Deleted List";
 Delete.deleted.3="Deleted List";
