--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -18,10 +18,12 @@ Detail.title.3="Shopping";
 Detail.empty.1="No Kanban Boards";
 Detail.empty.2="No To-Do Lists";
 Detail.empty.3="No Shopping Lists";
+More.title="Settings";
 More.delete.1="Delete Board";
 More.delete.2="Delete List";
 More.delete.3="Delete List";
 More.done="Done";
+More.spell="Check spelling";
 Delete.cancel="Cancel";
 Delete.confirm="Delete";
 Delete.title.1="Delete Board";
