--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -4,6 +4,7 @@ Window.zoom="Zoom";
 Bar.kanban="Kanban";
 Bar.todo="To-Do";
 Bar.shopping="Shopping";
+Bar.shop="Purchases";
 Add.title.1="New Kanban";
 Add.subtitle.1="Start a new Kanban Board project,";
 Add.title.2="New To-Do";
@@ -35,3 +36,11 @@ Delete.title.card.3="Delete Product";
 Delete.deleted.1="Deleted Board";
 Delete.deleted.2="Deleted List";
 Delete.deleted.3="Deleted List";
+Shop.title="Purchases";
+Shop.purchased="Purchased";
+Shop.purchase="Purchase";
+Shop.restore="Restore";
+Shop.title.two="Increase your available space for projects by 2.";
+Shop.descr.two="\n\nThe total amount of projects you can have will be increased permanently.\n\nThis purchase is Non-Consumable, meaning once you have it you can create and delete projects without loosing this purchase.\n\nThis purchase is cumulative so you can combine it with other purchases that also increase your space.";
+Error="Error";
+Logo="Loading";
