Redirect to purchases

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -11,8 +11,10 @@ Add.title.2="New To-Do";
 Add.subtitle.2="Start a new To-Do List,";
 Add.title.3="New Shopping";
 Add.subtitle.3="Start a new Shopping List,";
-Add.subtitle.bottom="\nyour available space is";
+Add.subtitle.bottom="\nyour current available space is";
+Add.purchases="See Purchases";
 Add.cancel="Cancel";
+Add.info="You have used your available space, to create a new project you could buy more space in Purchases.\n\nAlternatively you can free up space by deleting a project.";
 Detail.title.1="Kanban";
 Detail.title.2="To-Do";
 Detail.title.3="Shopping";
