--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -14,7 +14,7 @@ Add.subtitle.3="Start a new Shopping List,";
 Add.subtitle.bottom="\nyour current available space is";
 Add.purchases="See Purchases";
 Add.cancel="Cancel";
-Add.info="You have used your available space, to create a new project you could buy more space in Purchases.\n\nAlternatively you can free up space by deleting a project.";
+Add.info="You have used your available space.\nTo create a new project you could buy more space in Purchases.\n\nAlternatively you can free up space by deleting a project.";
 Detail.title.1="Kanban";
 Detail.title.2="To-Do";
 Detail.title.3="Shopping";
