--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -50,6 +50,9 @@ Shop.title.hundred="Increase your available space for projects by 100.";
 Shop.descr.hundred="\n\nThe total amount of projects you can have will be increased permanently.\n\nThis purchase is Non-Consumable, meaning once you have it you can create and delete projects without loosing this purchase.\n\nThis purchase is cumulative so you can combine it with other purchases that also increase your space.";
 Error="Error";
 Logo="Loading";
+Card="Card";
+Column="Column";
+Kanban.project="Project";
 Menu.holbox="holbox";
 Menu.about="About";
 Menu.hide="Hide";
