--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -52,6 +52,10 @@ Error="Error";
 Logo="Loading";
 Card="Card";
 Card.done="Done";
+Card.delete="Delete";
+Card.delete.title="Delete Card?";
+Card.delete.confirm="Delete";
+Card.delete.cancel="Cancel";
 Column="Column";
 Kanban.project="Project";
 Menu.holbox="holbox";
