--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -52,10 +52,12 @@ Error="Error";
 Logo="Loading";
 Card="Card";
 Card.done="Done";
+Card.move="Move";
 Card.delete="Delete";
 Card.delete.title="Delete Card?";
 Card.delete.confirm="Delete";
 Card.delete.cancel="Cancel";
+Card.move.done="Done";
 Column="Column";
 Kanban.project="Project";
 Menu.holbox="holbox";
