--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -53,6 +53,8 @@ Logo="Loading";
 Card="Card";
 Card.done="Done";
 Card.move="Move";
+Card.move.column="Column";
+Card.move.position="Position";
 Card.delete="Delete";
 Card.delete.title="Delete Card?";
 Card.delete.confirm="Delete";
