--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -53,7 +53,7 @@ Logo="Loading";
 Card="Card";
 Card.done="Done";
 Card.move="Move";
-Card.move.column="Column";
+Card.move.column="Column: cards";
 Card.move.position="Position";
 Card.delete="Delete";
 Card.delete.title="Delete Card?";
