Add project detail

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -56,12 +56,10 @@ Card.move="Move";
 Card.move.column="Column: cards";
 Card.move.position="Position";
 Card.delete="Delete";
-Card.delete.title="Delete Card?";
-Card.delete.confirm="Delete";
-Card.delete.cancel="Cancel";
 Card.move.done="Done";
 Column="Column";
 Kanban.project="Project";
+Kanban.delete="Delete";
 Menu.holbox="holbox";
 Menu.about="About";
 Menu.hide="Hide";
