--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -49,6 +49,7 @@ Shop.descr.ten="\n\nThe total amount of projects you can have will be increased 
 Shop.title.hundred="Increase your available space for projects by 100.";
 Shop.descr.hundred="\n\nThe total amount of projects you can have will be increased permanently.\n\nThis purchase is Non-Consumable, meaning once you have it you can create and delete projects without loosing this purchase.\n\nThis purchase is cumulative so you can combine it with other purchases that also increase your space.";
 Error="Error";
+Error.email="Email not configured.";
 Logo="Loading";
 Card="Card";
 Card.done="Done";
@@ -60,6 +61,17 @@ Card.move.done="Done";
 Column="Column";
 Kanban.project="Project";
 Kanban.delete="Delete";
+About.title="holbox\n";
+About.options="Options";
+About.options.0="Privacy";
+About.options.1="Notifications";
+About.options.2="Contact us";
+About.options.3="Review on the App Store";
+About.subject="Contact";
+About.body="Dear holbox, \n\n\n";
+Privacy.title="Privacy";
+Privacy.label="We do NOT track your activity in any way, not Analytics nor any other event nor behaviour metrics. Whatever you do with this app is up to you and we don't want to know about it.\n\nYour projects are codified, compressed and stored locally in your device, they are also sent to a private container in iCloud to be able to share them with your other devices, only you have access to them; if you prefer you can disable iCloud for this app in your device Settings > Apple ID > iCloud > holbox, you will still be able to create and modify your projects but you won't be able to share them among your devices.\n\nNotifications are only used to let you know of important messages or errors while you are using the app. We will NOT send you Push Notifications.\n\nIf you have any question please contact us.\n\nCheers,\nholbox team";
+Privacy.done="Done";
 Menu.holbox="holbox";
 Menu.about="About";
 Menu.hide="Hide";
