--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -12,9 +12,11 @@ Add.subtitle.2="Start a new To-Do List,";
 Add.title.3="New Shopping";
 Add.subtitle.3="Start a new Shopping List,";
 Add.subtitle.bottom="\nyour current available space is";
+Add.subtitle.other="Your available space";
 Add.purchases="See Purchases";
 Add.cancel="Cancel";
 Add.info="You have used your available space.\nTo create a new project you could buy more space in Purchases.\n\nAlternatively you can free up space by deleting a project.";
+Add.other="You can create more projects on the iPhone or Mac apps.";
 Detail.title.1="Kanban";
 Detail.title.2="To-Do";
 Detail.title.3="Shopping";
