--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -87,6 +87,8 @@ Privacy.done="Continue";
 Back="Back";
 Task="Task";
 Todo.empty="No tasks yet";
+Todo.restart="Re starting task";
+Todo.completed="Done!";
 Menu.holbox="holbox";
 Menu.about="About";
 Menu.hide="Hide";
