--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -42,6 +42,9 @@ Delete.title.card.3="Delete Product";
 Delete.deleted.1="Deleted Board";
 Delete.deleted.2="Deleted List";
 Delete.deleted.3="Deleted List";
+Delete.deleted.card.1="Deleted Card";
+Delete.deleted.card.2="Deleted Task";
+Delete.deleted.card.3="Deleted Product";
 Shop.title="Purchases";
 Shop.purchased="Purchased";
 Shop.purchase="Purchase";
