--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -72,9 +72,7 @@ Card.move.title="Column";
 Card.delete="Delete";
 Card.move.done="Done";
 Column="Column";
-Kanban.project="Project";
-Kanban.delete="Delete";
-Kanban.rename="Rename";
+Project="Project";
 About.title="holbox\n";
 About.small="holbox";
 About.options.0="Privacy";
