--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -12,14 +12,14 @@ Add.subtitle.2="Start a new To-Do List,";
 Add.title.3="New Shopping";
 Add.subtitle.3="Start a new Shopping List,";
 Add.subtitle.bottom="\nyour current available space is";
-Add.subtitle.other="Your available space";
+Add.subtitle.other="Available space";
 Add.card.1="Card";
 Add.card.2="New Task";
 Add.card.3="New Product";
 Add.purchases="See Purchases";
 Add.cancel="Cancel";
 Add.info="You have used your available space in this device, to create a new project you could buy more space in Purchases.\n\nAlternatively you can free up space by deleting a project.";
-Add.other="You can create more projects on the iPhone or Mac apps.";
+Add.other="You can create more projects on the iPhone or Mac apps, or free space by deleting projects.";
 Add.projects.title="Projects: ";
 Add.capacity.title="\nCapacity: ";
 Detail.title.1="Kanban";
