--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -90,10 +90,21 @@ Privacy.label="\n\nWe do NOT track your activity in any way, not Analytics nor a
 Privacy.done="Continue";
 Back="Back";
 Task="Task";
+Product.emoji="Emoji";
+Product.description="Description";
 Todo.empty="No tasks yet";
 Todo.restart="Re starting task";
 Todo.completed="Done!";
 Todo.delete="Delete";
+Shopping.empty="Nothing to buy";
+Stock.add.title="New product";
+Stock.add.done="Add";
+Stock.edit.title="Edit product";
+Stock.edit.done="Done";
+Stock.cancel="Cancel";
+Stock.delete="Delete";
+Stock.add.emoji="🍏";
+Stock.add.message="Apples";
 Menu.holbox="holbox";
 Menu.about="About";
 Menu.hide="Hide";
