Add grocery items

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -96,7 +96,8 @@ Todo.empty="No tasks yet";
 Todo.restart="Re starting task";
 Todo.completed="Done!";
 Todo.delete="Delete";
-Shopping.empty="Nothing to buy";
+Shopping.empty.grocery="Nothing to buy";
+Shopping.empty.products="No products added";
 Stock.add.title="New product";
 Stock.add.done="Add";
 Stock.edit.title="Edit product";
