--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -14,8 +14,8 @@ Add.subtitle.3="Start a new Shopping List,";
 Add.subtitle.bottom="\nyour current available space is";
 Add.subtitle.other="Available space";
 Add.card.1="Card";
-Add.card.2="New Task";
-Add.card.3="New Product";
+Add.card.2="Task";
+Add.card.3="Product";
 Add.purchases="See Purchases";
 Add.cancel="Cancel";
 Add.info="You have used your available space in this device, to create a new project you could buy more space in Purchases.\n\nAlternatively you can free up space by deleting a project.";
