--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -98,6 +98,8 @@ Todo.completed="Done!";
 Todo.delete="Delete";
 Shopping.empty.grocery="Nothing to buy";
 Shopping.empty.products="No products added";
+Shopping.add="Added";
+Shopping.got="Got";
 Stock.add.title="New product";
 Stock.add.done="Add";
 Stock.edit.title="Edit product";
