--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -107,7 +107,7 @@ Stock.edit.done="Done";
 Stock.cancel="Cancel";
 Stock.delete="Delete";
 Stock.add.emoji="🍏";
-Stock.add.message="Apples";
+Stock.add.label="Apples";
 Menu.holbox="holbox";
 Menu.about="About";
 Menu.hide="Hide";
