Update home transition

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -8,29 +8,27 @@ Bar.notes="Notes";
 Bar.home="Home";
 Bar.shop="Purchases";
 Bar.more="Settings";
-Add.title.1="New Kanban";
-Add.subtitle.1="Start a new Kanban Board project,";
-Add.title.2="New To-Do";
-Add.subtitle.2="Start a new To-Do List,";
-Add.title.3="New Shopping";
-Add.subtitle.3="Start a new Shopping List,";
-Add.subtitle.bottom="\nyour current available space is";
-Add.subtitle.other="Available space";
-Add.card.1="Card";
-Add.card.2="Task";
-Add.card.3="Product";
+Bar.add="Add";
+Add.title="New Project";
+Add.subtitle="It all starts here";
+Add.available="Available";
+Add.projects="Projects";
+Add.capacity="Capacity";
+Add.info="You have used your available space in this device, to create a new project you could buy more space in Purchases.\n\nAlternatively you can free up space by deleting a project.";
 Add.purchases="See Purchases";
 Add.cancel="Cancel";
-Add.info="You have used your available space in this device, to create a new project you could buy more space in Purchases.\n\nAlternatively you can free up space by deleting a project.";
-Add.other="You can create more projects on the iPhone or Mac apps, or free space by deleting projects.";
-Add.projects.title="Projects: ";
-Add.capacity.title="\nCapacity: ";
+Add.kanban="New Kanban";
+Add.todo="New Todo List";
+Add.shopping="New Shopping List";
+Add.notes="New Notes";
 Detail.title.1="Kanban";
 Detail.title.2="To-Do";
 Detail.title.3="Shopping";
+Detail.title.4="Notes";
 Detail.empty.1="No Kanban Boards";
 Detail.empty.2="No To-Do Lists";
 Detail.empty.3="No Shopping Lists";
+Detail.empty.4="No Notes";
 Delete.cancel="Cancel";
 Delete.confirm="Delete";
 Delete.title.1="Delete Board";
@@ -49,6 +47,7 @@ Shop.title="Purchases";
 Shop.purchased="Purchased";
 Shop.purchase="Purchase";
 Shop.restore="Restore";
+Shop.cancel="Cancel";
 Shop.short.two="+2";
 Shop.title.two="\nIncrease your available space for projects by 2.";
 Shop.descr.ios.two="The total amount of projects you can have will be increased permanently.\n\nThis purchase is Non-Consumable, meaning once you have it you can create and delete projects without loosing this purchase.\n\nThis purchase will increase the total amount of projects you can create on iPhone, iPad and iPod, you will be able to share those projects with your Mac and Apple Watch, but you will still be limited to create additional projects there.";
