--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -25,10 +25,10 @@ Detail.title.1="Kanban";
 Detail.title.2="To-Do";
 Detail.title.3="Shopping";
 Detail.title.4="Notes";
-Detail.empty.1="No Kanban Boards";
-Detail.empty.2="No To-Do Lists";
-Detail.empty.3="No Shopping Lists";
-Detail.empty.4="No Notes";
+Detail.empty.1="You don't have any Kanban project yet";
+Detail.empty.2="You don't have any To Do list yet";
+Detail.empty.3="You don't have any Shopping list yet";
+Detail.empty.4="You don't have any Notes yet";
 Delete.cancel="Cancel";
 Delete.confirm="Delete";
 Delete.title.1="Delete Board";
