--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -21,14 +21,7 @@ Add.kanban="New Kanban";
 Add.todo="New Todo List";
 Add.shopping="New Shopping List";
 Add.notes="New Notes";
-Detail.title.1="Kanban";
-Detail.title.2="To-Do";
-Detail.title.3="Shopping";
-Detail.title.4="Notes";
-Detail.empty.1="You don't have any Kanban project yet";
-Detail.empty.2="You don't have any To Do list yet";
-Detail.empty.3="You don't have any Shopping list yet";
-Detail.empty.4="You don't have any Notes yet";
+Detail.title="Projects";
 Delete.cancel="Cancel";
 Delete.confirm="Delete";
 Delete.title.1="Delete Board";
