--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -17,10 +17,11 @@ Add.capacity="Capacity";
 Add.info="You have used your available space in this device, to create a new project you could buy more space in Purchases.\n\nAlternatively you can free up space by deleting a project.";
 Add.purchases="See Purchases";
 Add.cancel="Cancel";
-Add.kanban="New Kanban";
-Add.todo="New Todo List";
-Add.shopping="New Shopping List";
-Add.notes="New Notes";
+Add.confirm="Add";
+Add.kanban="Kanban";
+Add.todo="Todo List";
+Add.shopping="Shopping List";
+Add.notes="Notes";
 Detail.title="Projects";
 Delete.cancel="Cancel";
 Delete.confirm="Delete";
