--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -66,6 +66,10 @@ Card.delete="Delete";
 Card.move.done="Done";
 Column="Column";
 Project="Project";
+Project.columns="columns";
+Project.cards="cards";
+Project.tasks="tasks";
+Project.products="products";
 About.title="holbox";
 About.done="Done";
 Settings.options.0="Privacy";
