--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -70,6 +70,12 @@ Project.columns="columns";
 Project.cards="cards";
 Project.tasks="tasks";
 Project.products="products";
+Project.notes="sheets";
+Project.modified="Modified";
+Project.done="done";
+Project.waiting="waiting";
+Project.purchased="purchased";
+Project.needed="needed";
 About.title="holbox";
 About.done="Done";
 Settings.options.0="Privacy";
