--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -23,20 +23,10 @@ Add.todo="Todo List";
 Add.shopping="Shopping List";
 Add.notes="Notes";
 Detail.title="Projects";
+Delete.title="Delete?";
 Delete.cancel="Cancel";
 Delete.confirm="Delete";
-Delete.title.1="Delete Board";
-Delete.title.2="Delete List";
-Delete.title.3="Delete List";
-Delete.title.card.1="Delete Card";
-Delete.title.card.2="Delete Task";
-Delete.title.card.3="Delete Product";
-Delete.deleted.1="Deleted Board";
-Delete.deleted.2="Deleted List";
-Delete.deleted.3="Deleted List";
-Delete.deleted.card.1="Deleted Card";
-Delete.deleted.card.2="Deleted Task";
-Delete.deleted.card.3="Deleted Product";
+Delete.done="Deleted";
 Shop.title="Purchases";
 Shop.purchased="Purchased";
 Shop.purchase="Purchase";
