--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -7,10 +7,10 @@ Bar.shopping="Shopping";
 Bar.notes="Notes";
 Bar.home="Home";
 Bar.shop="Purchases";
-Bar.more="Settings";
+Bar.settings="Settings";
 Bar.add="Add";
 Add.title="New Project";
-Add.subtitle="It all starts here";
+Add.subtitle="Create a new project";
 Add.available="Available";
 Add.projects="Projects";
 Add.capacity="Capacity";
@@ -31,7 +31,7 @@ Shop.title="Purchases";
 Shop.purchased="Purchased";
 Shop.purchase="Purchase";
 Shop.restore="Restore";
-Shop.cancel="Cancel";
+Shop.cancel="Done";
 Shop.short.two="+2";
 Shop.title.two="\nIncrease your available space for projects by 2.";
 Shop.descr.ios.two="The total amount of projects you can have will be increased permanently.\n\nThis purchase is Non-Consumable, meaning once you have it you can create and delete projects without loosing this purchase.\n\nThis purchase will increase the total amount of projects you can create on iPhone, iPad and iPod, you will be able to share those projects with your Mac and Apple Watch, but you will still be limited to create additional projects there.";
@@ -68,6 +68,9 @@ Project.purchased="purchased";
 Project.needed="needed";
 About.title="holbox";
 About.done="Done";
+Settings.title="Settings";
+Settings.done="Done";
+Settings.spell="Check spelling";
 Settings.options.0="Privacy";
 Settings.options.1="Notifications";
 Settings.options.2="Contact us";
@@ -76,7 +79,7 @@ Settings.options.4="Review on the App Store";
 Settings.subject="Contact";
 Settings.body="Dear holbox, \n\n\n";
 Privacy.title="Privacy";
-Privacy.label="\n\nWe do NOT track your activity in any way, not Analytics nor any other event nor behaviour metrics. Whatever you do with this app is up to you and we don't want to know about it.\n\nYour projects are codified, compressed and stored locally in your device, they are also sent to a private container in iCloud to be able to share them with your other devices, only you have access to them; if you prefer you can disable iCloud for this app in your device Settings > Apple ID > iCloud > holbox, you will still be able to create and modify your projects but you won't be able to share them among your devices.\n\nNotifications are only used to let you know of important messages or errors while you are using the app. We will NOT send you Push Notifications.\n\nIf you have any question please contact us.\n\nCheers,\nholbox team";
+Privacy.label="We do NOT track your activity in any way, not Analytics nor any other event or behaviour metrics. Whatever you do with this app is up to you and we don't want to know about it.\n\nYour projects are codified, compressed and stored locally in your device, they are also sent to a private container in iCloud to be able to share them with your other devices, only you have access to them, if you prefer you can disable iCloud for this app in your device Settings.\n\nNotifications are only used to let you know of important messages or errors while you are using the app. We will NOT send you Push Notifications.";
 Privacy.done="Continue";
 Back="Back";
 Task="Task";
