--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -60,7 +60,7 @@ Project.columns="columns";
 Project.cards="cards";
 Project.tasks="tasks";
 Project.products="products";
-Project.notes="sheets";
+Project.notes="words";
 Project.modified="Modified";
 Project.done="done";
 Project.waiting="waiting";
@@ -99,6 +99,7 @@ Stock.cancel="Cancel";
 Stock.delete="Delete";
 Stock.add.emoji="🍏";
 Stock.add.label="Apples";
+Note="Note";
 Menu.holbox="holbox";
 Menu.about="About";
 Menu.hide="Hide";
