--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -60,8 +60,10 @@ Project.columns="columns";
 Project.cards="cards";
 Project.tasks="tasks";
 Project.products="products";
-Project.notes="words";
+Project.words="words";
+Project.lines="lines";
 Project.modified="Modified";
+Project.created="Created";
 Project.done="done";
 Project.waiting="waiting";
 Project.purchased="purchased";
