Add sentiment analysis

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -60,9 +60,16 @@ Project.columns="columns";
 Project.cards="cards";
 Project.tasks="tasks";
 Project.words="words";
+Project.english="English";
+Project.german="German";
+Project.negative="Mostly negative";
+Project.positive="Mostly positive";
+Project.neutral="Mostly neutral";
 Project.lines="lines";
 Project.modified="Modified";
 Project.created="Created";
+Project.paragraphs="pragraphs";
+Project.sentences="sentences";
 Project.done="done";
 Project.waiting="waiting";
 Project.products="products";
