--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -110,6 +110,7 @@ Stock.add.label="Apples";
 Note="Note";
 Search="Search";
 Find.matches="matches";
+Chart.total="Total";
 Menu.holbox="holbox";
 Menu.about="About";
 Menu.hide="Hide";
