--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -110,9 +110,11 @@ Stock.add.label="Apples";
 Note="Note";
 Search="Search";
 Find.matches="matches";
-Chart.total="Total";
+Chart.cards="Cards";
+Chart.tasks="Tasks";
 Chart.done="Done";
-Chart.need="Need";
+Chart.products="Products";
+Chart.got="Got";
 Menu.holbox="holbox";
 Menu.about="About";
 Menu.hide="Hide";
