--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -23,7 +23,7 @@ Add.todo="Todo List";
 Add.shopping="Shopping List";
 Add.notes="Notes";
 Detail.title="Projects";
-Delete.title="Delete?";
+Delete.title="Delete";
 Delete.cancel="Cancel";
 Delete.confirm="Delete";
 Delete.done="Deleted";
