--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -19,7 +19,7 @@ Add.purchases="See Purchases";
 Add.cancel="Cancel";
 Add.confirm="Add";
 Add.kanban="Kanban";
-Add.todo="Todo List";
+Add.todo="To Do List";
 Add.shopping="Shopping List";
 Add.notes="Notes";
 Detail.title="Projects";
