--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -53,7 +53,9 @@ Card.move.position="Position";
 Card.move.title="Column";
 Card.delete="Delete";
 Card.move.done="Done";
-Move.title="Position";
+Move.done="Done";
+Move.edit="Edit";
+Move.delete="Delete";
 Column="Column";
 Project="Project";
 Project.columns="columns";
