Add and remove columns

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -22,6 +22,12 @@ Add.kanban="Kanban";
 Add.todo="To Do List";
 Add.shopping="Shopping List";
 Add.notes="Notes";
+Kanban.add="New card";
+Kanban.column="Add column";
+Kanban.new="New";
+Kanban.added="New column";
+Kanban.last="Can't delete";
+Kanban.need="You need at least one column in your board.";
 Detail.title="Projects";
 Delete.title="Delete";
 Delete.cancel="Cancel";
@@ -96,9 +102,11 @@ Back="Back";
 Task="Task";
 Product.emoji="Emoji";
 Product.description="Description";
+Todo.add="New task";
 Todo.restart="Re starting task";
 Todo.completed="Done!";
-Shopping.add="Added";
+Shopping.add="New product";
+Shopping.added="Added";
 Shopping.got="Got";
 Shopping.products="Products";
 Stock.add.title="New product";
