Add notes stats

--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -72,9 +72,11 @@ Project.tasks="tasks";
 Project.words="words";
 Project.english="English";
 Project.german="German";
-Project.negative="Mostly negative";
-Project.positive="Mostly positive";
-Project.neutral="Mostly neutral";
+Project.spanish="Spanish";
+Project.french="French";
+Project.negative="negative";
+Project.positive="positive";
+Project.neutral="neutral";
 Project.lines="lines";
 Project.modified="Modified";
 Project.created="Created";
