--- a/en.lproj/Localizable.strings
+++ b/en.lproj/Localizable.strings
@@ -10,7 +10,7 @@ Bar.shop="Purchases";
 Bar.settings="Settings";
 Bar.add="Add";
 Add.title="New Project";
-Add.subtitle="Create a new project";
+Add.subtitle="Choose a type of project";
 Add.available="Available";
 Add.projects="Projects";
 Add.capacity="Capacity";
